services/reverse-proxy/kubernetes/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reverse-proxy
spec:
  parentRefs:
  - name: cilium-gateway
    namespace: default
  hostnames:
  - develop.panicboat.net
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: reverse-proxy
      port: 80
